Patch by Raymond Toy <rtoy@google.com> on 2011-12-14

* platform/audio/Distance.h (WebCore):

Incorrect calculation for DistanceEffect linearGain
https://bugs.webkit.org/show_bug.cgi?id=72871

Reviewed by Kenneth Russell.

Tests still need to be written for all distance models.  This
does not add a new API and just corrects an implementation error.

* platform/audio/Distance.cpp:
(WebCore::DistanceEffect::linearGain): Implement correct
linearGain function.  (Fix proposed by davidgaleano@hotmail.com.)
* platform/audio/Distance.h: Add link to Open AL specification.

Canonical link: https://commits.webkit.org/91193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102810 268f45cc-cd09-0410-ab3c-d52691b4dbfc