Source/WebCore/platform/audio/Distance.h
@@ -31,7 +31,8 @@
 
 namespace WebCore {
 
-// Distance models are defined according to the OpenAL specification
+// Distance models are defined according to the OpenAL specification:
+// http://connect.creativelabs.com/openal/Documentation/OpenAL%201.1%20Specification.htm.
 
 class DistanceEffect {
 public:
